MINOR: Clean up classic group tests
Use `List.of` and `Set.of` where possible.